# mindvault-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: embedding-providers.md  external-validation.md  hermes-openclaw-config.md  llm-extraction.md  mcp-endpoint.md  sse-smoke-client.py
src/: embedding_provider.py
src/mindvault_mcp/: __init__.py  auth.py  config.py  enums.py  models.py  schemas.py  server.py
src/mindvault_mcp/services/: __init__.py  dedup.py  extraction.py  llm_extraction.py  retrieval.py  validation.py  verification.py
src/mindvault_mcp/storage/: __init__.py  markdown_store.py  repository.py  sqlite_index.py
src/mindvault_mcp/tools/: __init__.py  approve_card.py  common.py  get_card.py  ingest_memory.py  list_candidates.py  queue_verification.py  reject_card.py  search_cards.py  update_card.py
tests/: conftest.py  test_candidate_recall.py  test_config.py  test_embedding_cache_fingerprint.py  test_embedding_provider.py  test_external_validation.py  test_extraction.py  test_llm_extraction.py  test_markdown_store.py  test_mcp_client_integration.py  test_repository.py  test_search_and_dedup.py  test_server_smoke.py  test_sqlite_index.py  test_tools_smoke.py  test_validation_persistence.py  test_verification_queue.py
