[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindvault-mcp"
version = "0.1.0"
description = "Privacy-first MCP server for turning agent conversations into structured Markdown knowledge cards."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "mindvault-mcp contributors" }]
dependencies = [
  "fastmcp>=2.0.0",
  "pydantic>=2.6.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
mindvault-mcp = "mindvault_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
